logs/Slang/generated/yosys/sva_basic03.sv.log
name: sva_basic03
description: Tests imported from yosys
files: /home/travis/build/SymbiFlow/sv-tests/third_party/tools/yosys/tests/sva/basic03.sv
should_fail: 0
tags: yosys
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/third_party/tools/yosys/tests/sva/basic03.sv:7:2: error: language feature not yet supported
	check_selA: assert property ( @(posedge clk) selA |=> Q == $past(QA) );
	^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tools/yosys/tests/sva/basic03.sv:8:2: error: language feature not yet supported
	check_selB: assert property ( @(posedge clk) selB |=> Q == $past(QB) );
	^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tools/yosys/tests/sva/basic03.sv:10:2: error: language feature not yet supported
	assume_not_11: assume property ( @(posedge clk) !(selA & selB) );
	^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
